<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_border_bg"
    android:layout_margin="8dp"
    android:id="@+id/addNewItemLayout" >

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/volan_yellow"
        android:background="@color/mav_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/clockFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        tools:layout_editor_absoluteX="-73dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scheduled_arrival"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/scheduledClockInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scheduled_arrival"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="time"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actual_arrival"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/actualClockInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/actual_arrival"
                android:textAlignment="center"
                android:autofillHints=""
                android:inputType="time"
                />

            <Switch
                android:id="@+id/nextDaySwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/next_day"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clockFields" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_travel"
            />

        <EditText
            android:id="@+id/travelDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_of_travel"
            android:inputType="date"
            android:autofillHints=""
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flightField"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateField" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flight_text"
            />
        <EditText
            android:id="@+id/flightInfoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/flight_example"
            android:inputType="text"
            android:autofillHints=""
            android:ems="10"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonField"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightFieldField"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|start"
            android:orientation="vertical" >

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/volan_yellow"
                android:backgroundTint="@color/mav_blue"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|end"
            android:orientation="vertical" >

            <Button
                android:id="@+id/addBtn"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/volan_yellow"
                android:backgroundTint="@color/mav_blue"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>